# OpenBrain

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  docker-compose.yml  main.txt  package.json  pytest.ini  release-please-config.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release-please.yml  semantic-pr.yml
backend/: Dockerfile  __init__.py  pyproject.toml  requirements.txt
backend/app/: agents.py  cli.py  config.py  gltf_utils.py  main.py  models.py
backend/tests/: test_agents.py  test_agents_success.py  test_api.py  test_gltf_utils.py  test_metrics.py  test_stream_payload.py  test_ws.py
deploy/: app.Dockerfile  compose.yml  litellm.Dockerfile  loki-config.yml  otel-collector.yaml  prometheus.yml
detailed-human-brain-model-2025-05-03-05-00-45-utc/[OBJ] Human_Brain/: Human_Brain.mtl
docs/: architecture-upgrade-plan-part2.md  architecture-upgrade-plan.md  implementation-roadmap.md  implementation-summary.md  native-build-run.md  production-readiness.md
ops/: backup.ps1  backup.sh  restore.ps1  restore.sh
scripts/: bootstrap-native.ps1  bootstrap-native.sh  build-native.sh  ob.ps1  ob.sh
web/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts  vitest.config.ts  vitest.setup.ts
web/src/: App.test.tsx  App.tsx  index.css
web/src/components/: BrainConnectivity.test.tsx  BrainConnectivity.tsx  BrainScene.integration.test.tsx  BrainScene.test.tsx  BrainScene.tsx  Legend.test.tsx  (+2 more)
(+14 files in other folders)
